kubernetes/externaldnssetup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.k8s.io/external-dns/external-dns:v0.13.2
        args:
        - --source=service
        - --source=ingress  # or ingress or both
        - --provider=akamai
        - --domain-filter= #make sure you enter the domain record you plan to manage from external dns.
        # zone-id-filter may be specified as well to filter on contract ID
        - --registry=txt
        - --txt-owner-id=jucot
        - --txt-prefix=jucot
