kubernetes/prerenderDeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: prerender
  name: prerender
  namespace: prerender-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prerender
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: prerender
    spec:
      containers:
      - image: koton00beng/prerender:v1.1
        name: prerender
        ports:
        - containerPort: 8080
        resources: {}
status: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: prerender
  name: prerender
  namespace: prerender-ns
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: prerender
status:
  loadBalancer: {}
