kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prerenderingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod-prerender"
    external-dns.alpha.kubernetes.io/hostname: "prerender.jccsutils.net"
    external-dns.alpha.kubernetes.io/ttl: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - prerender.jccsutils.net
    secretName: prerender-tls
  rules:
  - host: prerender.jccsutils.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: prerender
            port:
              number: 8080
