kubernetes/ingressTemplate.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prerenderingress
  namespace: prerender-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "name of cluster issuer"
    external-dns.alpha.kubernetes.io/hostname: "www.example.com"
    external-dns.alpha.kubernetes.io/ttl: "30"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - "www.example.com"
    secretName: prerender-ns/"name of secret specified on cluster issuers"
  rules:
  - host: www.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: prerender
            port:
              number: 8080
